--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="deebx_gh_page">
-  <link rel="apple-touch-icon" href="./web/icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="./web/favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>deebx_gh_page</title>
-  <link rel="manifest" href="./web/manifest.json">
+  <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
     var serviceWorkerVersion = null;
   </script>
   <!-- This script adds the flutter initialization JS code -->
-  <script src="./build/web/flutter.js"></script>
+  <script src="flutter.js" defer></script>
 </head>
 <body>
   <script>
